--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="icon" href="img/logo.svg">
+    </head>
 
 <body>
+  <header>
+   <div class="pattern">
+    
+   </div> 
+
+  </header>
+  
+  <main>
+
+  </main>
+
+  <footer>
+
+  </footer>
+
     
 </body>
+
 </html>
