--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
   <header>
    <div class="pattern">
-    
+    <div class="titolo">
+     <img src="img/logo.svg" alt="titolo">
+    </div>
    </div> 
 
   </header>
